@@ -17,5 +17,5 @@ USER appuser
 EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
-ENV JAVA_OPTS="-XX:+EnablePreviewFeatures -Dspring.profiles.active=prod"
+ENV JAVA_OPTS="--enable-preview -XX:MaxRAMPercentage=75"
 ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar app.jar"]
